# schani_store

./: .env.example  .env.testing  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  Rocket.toml
home/stefan/Documents/image/1/: 1
home/stefan/Documents/image/70/: 70
home/stefan/Documents/sidecar_file/3/: 3
home/stefan/Documents/sidecar_file/69/: 69
migrations/20170602132652_create_images/: up.sql
migrations/20170602132701_create_raw_images/: down.sql  up.sql
migrations/20170602132713_create_collections/: up.sql
migrations/20170602134053_create_images_collections/: down.sql  up.sql
migrations/20170602134119_create_images_tags/: down.sql  up.sql
migrations/20170602135546_alter_images_tags/: down.sql  up.sql
migrations/20170602140514_alter_images/: down.sql  up.sql
migrations/20170602140527_alter_images_collections/: down.sql  up.sql
migrations/20170621115808_add_image_processed_flag/: down.sql  up.sql
src/: db_manager.rs  lib.rs  main.rs  models.rs
src/fileid/: hash.rs  mod.rs  stub.rs
src/routes/: collections.rs  images.rs  mod.rs  raw_images.rs  tags.rs
src/service/: mod.rs
src/services/: collection_service.rs  entity_service.rs  file_storage.rs  image_service.rs  mod.rs  raw_image_service.rs  tag_service.rs
src/storage/: dummy.rs  mod.rs  s3.rs
src/web/: handlers.rs  mod.rs
