[package]
name = "schani_store"
version = "0.1.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.7.0"
r2d2-diesel = "0.13.0"
lazy_static = "0.2"
chrono = "0.3"
