[package]
name = "schani_store"
version = "0.1.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
lazy_static = "0.2"
log = "^0.3"
r2d2 = "0.7.0"
r2d2-diesel = "0.13.0"
rocket = "0.2.8"
rocket_codegen = "0.2.8"
rocket_contrib = "0.2.8"
serde = "0.9"
serde_derive = "0.9"
